# VoiceFlow

./: .gitignore  CMakeLists.txt  README.md
doc/: DESIGN_DOC.md
packaging/: build_release.ps1  download_models.ps1  fetch_deps.ps1  voiceflow_asr_worker.py
src/: app.cpp  app.h  app_messages.h  main.cpp  resource.rc
src/asr/: microphone_capture.cpp  microphone_capture.h  moonshine_include.h  moonshine_session.cpp  moonshine_session.h  python_asr_bridge.cpp  python_asr_bridge.h
src/config/: settings.cpp  settings.h
src/hotkey/: global_hotkey.cpp  global_hotkey.h  hotkey_mode.cpp  hotkey_mode.h
src/inject/: text_injector.cpp  text_injector.h
src/setup/: component_cache.cpp  component_cache.h  first_run_wizard.cpp  first_run_wizard.h
src/tray/: tray_icon.cpp  tray_icon.h
src/ui/: settings_dialog.cpp  settings_dialog.h
src/util/: paths.cpp  paths.h  single_instance.cpp  single_instance.h
